--- a/porfolio_react/public/index.html
+++ b/porfolio_react/public/index.html
@@ -3,12 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="author" content="Everett Diuguid" />
+  <meta name="keywords" content="Everett Diuguid, Everett, Diuguid, Web Development, ReactJS, Full-Stack Web Development, everett diuguid, everett, diuguid" />
+  <meta name="description" content="Full-Stack Web Developer with a passion for learning new skills and debugging the world wide web!" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
