--- a/porfolio_react/public/index.html
+++ b/porfolio_react/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Everett Diuguid</title>
+  <title>Full Stack Web Developer: Everett Diuguid</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&display=swap"
     rel="stylesheet">
